--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,6 +184,10 @@ header .nav-toggle:focus:not(:focus-visible) {
   height: 40px;
   cursor: pointer;
 }
+.container .home__titulo .button a {
+  text-decoration: none;
+  color: #FFF;
+}
 @media (min-width: 1024px) {
   .container .home__titulo .button {
     width: 200px;
@@ -337,6 +341,9 @@ header .nav-toggle:focus:not(:focus-visible) {
   max-width: 1250px;
   margin: 0 auto;
 }
+.container .contact__container {
+  text-align: center;
+}
 @media (min-width: 1024px) {
   .container .contact__container {
     display: -webkit-box;
@@ -385,6 +392,7 @@ header .nav-toggle:focus:not(:focus-visible) {
 @media (min-width: 1024px) {
   .container .contact .contact__social {
     width: 50%;
+    margin: 0 auto;
   }
 }
 .container .contact .contact__social .email-fono {
@@ -424,6 +432,10 @@ header .nav-toggle:focus:not(:focus-visible) {
   color: #FFF;
   font-size: 3rem;
   padding: 10px 15px;
+}
+.container .contact .contact__social .redes a {
+  text-decoration: none;
+  color: #FFF;
 }
 @media (min-width: 1024px) {
   .container .contact .contact__social .redes {
