--- a/assets/scss/components/_central.scss
+++ b/assets/scss/components/_central.scss
@@ -38,6 +38,10 @@
                 width: 60%;
                 height: 40px;
                 cursor: pointer;
+                a {
+                    text-decoration: none;
+                    color: #FFF;
+                }
                 @include medias.for-desktop-up {   
                     width: 200px;
                     font-size: 2rem;
@@ -164,6 +168,7 @@
         max-width: 1250px;
         margin: 0 auto;
         &__container {
+            text-align: center;
             @include medias.for-desktop-up {   
                 display: flex;
                 padding: 0 60px;
@@ -200,6 +205,7 @@
         .contact__social {
             @include medias.for-desktop-up {   
                 width: 50%;
+                margin: 0 auto;
             }
             .email-fono {
                 background-color: #161616;
@@ -229,6 +235,10 @@
                 font-size: 3rem;
                 padding: 10px 15px;
                 // height: 160px;
+                a {
+                    text-decoration: none;
+                    color: #FFF;
+                }
                 @include medias.for-desktop-up {   
                     font-size: 4rem;
                     height: 160px;
